--- a/c/Makefile
+++ b/c/Makefile
@@ -1,7 +1,7 @@
 all: librgt.so
 
 librgt.so: librgt.c
-	$(CC) -Wall -g -fPIC -shared -o $@ $? -lc
+	$(CC) -Wall -g -fPIC -shared -o $@ $? -lc -O0
 
 test: test_main.c librgt.o
 	$(CC) -o $@ $?
